# the-minimal

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/static/files/: notes.html  notes.rs
src/templates/: about.html  home.html  index.html  notes.html  speech.html  theme-styles.css  theme-toggle.js  transcribe.html
static/: tailwind.css
