[package]
name = "get_a_bug"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.4"
dotenv = "0.15"
pdf-extract = "0.1"
jsonwebtoken = "8"
bcrypt = "0.12"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = "0.4"
uuid = { version = "1.1", features = ["v4"] }
async-stream = "0.3"
comrak = "0.13"
lopdf = "0.26"
hex = "0.4"
env_logger = "0.9"
log = "0.4"
